--- a/go/Makefile
+++ b/go/Makefile
@@ -1,5 +1,5 @@
 name:
 	echo "go"
 exe: src/github.com/cono/fizzbuzz/fizzbuzz.go
-	GOPATH=/home/cono/sh/fizz-buzz/go go install github.com/cono/fizzbuzz
+	GOPATH=$(CURDIR) go install github.com/cono/fizzbuzz
 	cp bin/fizzbuzz .
