--- a/pascal_andriix/Makefile
+++ b/pascal_andriix/Makefile
@@ -1,5 +1,4 @@
-output: fizzbuzz.pas
-	fpc fizzbuzz.pas
-
-clean:
-	rm *.o fizzbuzz
+name:
+	echo "pascal"
+fizzbuzz: fizzbuzz.pas
+	  fpc fizzbuzz.pas
